Add equipment to all languages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <li><a href="ru/company.html">Компания</a></li>
                             <li><a href="ru/equipment.html">Оборудование</a></li>
                             <li><a href="ru/technology.html">Технологии</a></li>
-                            <li><a href="ru/hse.html">ОТ</a></li>
+                            <li><a href="ru/hse.html">ОТ, ПБ и ООС</a></li>
                             
                             <li><a href="ru/news.html">Новости</a></li> 
                             <li><a href="ru/career.html">Карьера</a></li>
