--- a/en/main.html
+++ b/en/main.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Главная</title>
+        <title>Main</title>
         
         <!-- core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
