--- a/ru/contact-us.html
+++ b/ru/contact-us.html
@@ -43,12 +43,12 @@
                         <ul class="nav navbar-nav">
                             <li><a href="company.html">Компания</a></li>
                             <li><a href="equipment.html">Оборудование</a></li>
-                            <li><a href="/technology.html">Технологии</a></li>
-                            <li><a href="ru/hse.html">Охрана Труда</a></li>
+                            <li><a href="technology.html">Технологии</a></li>
+                            <li><a href="hse.html">ОТ, ПБ и ООС</a></li>
                             
-                            <li><a href="ru/news.html">Новости</a></li> 
-                            <li><a href="ru/career.html">Карьера</a></li>
-                            <li><a href="ru/contact-us.html">Контакты</a></li>                        
+                            <li><a href="news.html">Новости</a></li> 
+                            <li><a href="career.html">Карьера</a></li>
+                            <li><a href="contact-us.html">Контакты</a></li>                        
                         </ul>
 
                     </div>
