Add HSE page in en

--- a/en/company.html
+++ b/en/company.html
@@ -37,7 +37,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="btn btn-xs btn-default" href="../index.html">RU</a>
+                        <a class="btn btn-xs btn-default" href="../ru/company.html">RU</a>
                         <a href="main.html"><img src="../images/logo.png" alt="logo"></a>
 
                     </div>
@@ -193,12 +193,12 @@
             </div><!--/.bottom-bar-->   
         </footer><!--/#footer-->
 
-        <script src="js/jquery.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.prettyPhoto.js"></script>
-        <script src="js/jquery.isotope.min.js"></script>
-        <script src="js/main.js"></script>
-        <script src="js/wow.min.js"></script>
+        <script src="../js/jquery.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/jquery.prettyPhoto.js"></script>
+        <script src="../js/jquery.isotope.min.js"></script>
+        <script src="../js/main.js"></script>
+        <script src="../js/wow.min.js"></script>
 
     </body>
 </html>
