--- a/en/hse.html
+++ b/en/hse.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Main</title>
+        <title>HSE</title>
         
         <!-- core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="btn btn-xs btn-default" href="../index.html">RU</a>
+                        <a class="btn btn-xs btn-default" href="../ru/hse.html">RU</a>
                         <a href="main.html"><img src="../images/logo.png" alt="logo"></a>
 
                     </div>
@@ -62,66 +62,51 @@
 
         <div class="page-content">
             <div class="wrap">
-          
-                <section id="main-slider" class="no-margin">
-                    <div class="carousel slide">
-                        <ol class="carousel-indicators">
-                            <li data-target="#main-slider" data-slide-to="0" class="active"></li>
-                            <li data-target="#main-slider" data-slide-to="1"></li>
-                            <li data-target="#main-slider" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
+          		<div class="center"><h2 color="green">HSE</h2></div>
+                <div class="row">
+				  <div class="col-sm-4">
+					<p>Newteck Well Service thinks that 
+						  there is nothing more important than 
+						  safety of human life, environment
+						  and our Customer. We don’t just
+						  comply with federal HSE law but also
+						  constantly invest funds and spend
+						  time for in-house audit and advanced
+						  training of personnel. The Company 
+						  employees are certified for HSE 
+						  compliance.</p>
+				  </div>
+				  <div class="col-sm-4">
+					  <p>
+						  Our aim is to ensure safety, industrial 
+						  and environmental protection (HSE) 
+						  are the key values for each 
+						  employee. The Company values its 
+						  employees and reputation, therefore, 
+						  provides the staff with all required
+						  HSE information and regularly assess 
+						  the safety knowledge of the staff. 
+						  The employees are provided with 
+						  PPE and other required facilities.
+					  </p>
+				  </div>
+				  <div class="col-sm-4">
+					  <p>
+						  Key principles:
+					  </p>
+					  <p>
+						  HSE incidents can be prevented. 
+						  Leadership and adherence to HSE 
+						  ideas are of primary importance. 
+						  Observance of HSE principles and 
+						  compliance with applicable law ad 
+						  regulatory acts must be obligatory for 
+						  each employee. HSE performance 
+						  indexes should be measured and 
+						  monitored.
 
-                            <div class="item active" style="background-image: url(../images/slider/bg1.jpg)">
-                                <div class="container">
-                                    <div class="row slide-margin">
-                                        <div class="col-sm-6">
-                                            <div class="carousel-content">
-                                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
-                                                <a class="btn-slide animation animated-item-3" href="#">Read More</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div><!--/.item-->
-
-                            <div class="item" style="background-image: url(../images/slider/bg2.jpg)">
-                                <div class="container">
-                                    <div class="row slide-margin">
-                                        <div class="col-sm-6">
-                                            <div class="carousel-content">
-                                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
-                                                <a class="btn-slide animation animated-item-3" href="#">Read More</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div><!--/.item-->
-
-                            <div class="item" style="background-image: url(../images/slider/bg3.jpg)">
-                                <div class="container">
-                                    <div class="row slide-margin">
-                                        <div class="col-sm-6">
-                                            <div class="carousel-content">
-                                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
-                                                <a class="btn-slide animation animated-item-3" href="#">Read More</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div><!--/.item-->
-                        </div><!--/.carousel-inner-->
-                    </div><!--/.carousel-->
-                    <a class="prev hidden-xs" href="#main-slider" data-slide="prev">
-                        <i class="fa fa-chevron-left"></i>
-                    </a>
-                    <a class="next hidden-xs" href="#main-slider" data-slide="next">
-                        <i class="fa fa-chevron-right"></i>
-                    </a>
-                </section><!--/#main-slider-->
+					  </p>
+				</div>          
             </div>
         </div><!-- /#page-content -->
 
