Add tech page in en

--- a/en/technology.html
+++ b/en/technology.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>HSE</title>
+        <title>Technology</title>
         
         <!-- core CSS -->
         <link href="../css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="btn btn-xs btn-default" href="../ru/hse.html">RU</a>
+                        <a class="btn btn-xs btn-default" href="../ru/technology.html">RU</a>
                         <a href="main.html"><img src="../images/logo.png" alt="logo"></a>
 
                     </div>
@@ -62,59 +62,64 @@
 
         <div class="page-content">
             <div class="wrap">
+                <section id="technology">
+                    <div class="center">
+                        <h2>Technology</h2>
+                    </div>
+                    <div class="container">
+                        <div id="technology-slider" class="carousel slide" data-ride="carousel" style="min-height: 300px;">
 
-            	<div class="container">
-            		<section id="hse">
-	          		<div class="center"><h2>HSE</h2></div>
-	                <div class="row">
-					  <div class="col-sm-4">
-						<p>Newteck Well Service thinks that 
-							  there is nothing more important than 
-							  safety of human life, environment
-							  and our Customer. We don’t just
-							  comply with federal HSE law but also
-							  constantly invest funds and spend
-							  time for in-house audit and advanced
-							  training of personnel. The Company 
-							  employees are certified for HSE 
-							  compliance.</p>
-					  </div>
-					  <div class="col-sm-4">
-						  <p>
-							  Our aim is to ensure safety, industrial 
-							  and environmental protection (HSE) 
-							  are the key values for each 
-							  employee. The Company values its 
-							  employees and reputation, therefore, 
-							  provides the staff with all required
-							  HSE information and regularly assess 
-							  the safety knowledge of the staff. 
-							  The employees are provided with 
-							  PPE and other required facilities.
-						  </p>
-					  </div>
-					  <div class="col-sm-4">
-						  <p>
-							  Key principles:
-						  </p>
-						  <p>
-							  HSE incidents can be prevented. 
-							  Leadership and adherence to HSE 
-							  ideas are of primary importance. 
-							  Observance of HSE principles and 
-							  compliance with applicable law ad 
-							  regulatory acts must be obligatory for 
-							  each employee. HSE performance 
-							  indexes should be measured and 
-							  monitored.
+                            <ol class="carousel-indicators visible-xs">
+                                <li data-target="#technology-slider" data-slide-to="0" class="active"></li>
+                                <li data-target="#technology-slider" data-slide-to="1"></li>
+                                <li data-target="#technology-slider" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <div class="row">
+                                        <div class="col-sm-4 col-sm-offset-1 first-column">
+                                            <h3>Slick water</h3>
+                                            <p>Slick Water is a water-based chemical used to reduce surface tension.</p>
+                                            <p>More often fracs are performed in low-permeability reservoirs, with the use of non-viscous water-based fluids and with addition of friction reducing agents.</p>
+                                            <p>A fluid used during fracturing treatment allows for transporting proppant by means of high pumping rate and without any gellant required. Frac fluid does not need preliminary heating.</p>
 
-						  </p>
-						</div>
-					</div>
 
-				</section>
-				</div>
+                                        </div>
+                                        <div class="col-sm-4 col-sm-offset-2 second-column">
+                                            <h3>&nbsp;</h3>
+                                            <p>Slick Water is a water-based chemical used to reduce surface tension.</p>
+                                            <p>More often fracs are performed in low-permeability reservoirs, with the use of non-viscous water-based fluids and with addition of friction reducing agents.</p>
+                                            <p>A fluid used during fracturing treatment allows for transporting proppant by means of high pumping rate and without any gellant required. Frac fluid does not need preliminary heating.</p>
 
+
+                                        </div>
+                                    </div><!-- row -->
+                                </div><!-- item -->
+                                <div class="item">
+                                    <div class="row">
+                                        <div class="col-sm-4 col-sm-offset-1 first-column">
+                                            <h3>High-rate fracs</h3>
+                                            <p>The frac equipment Newteck has at its disposal allows performing fracs at high flow rate (up to 12m3/min).</p>
+                                            <p>High-rate pumping allows creating a perfect network of fractures, optimally deliver proppant to remotest stimulated well zones with no</p>
+                                            
+
+
+                                        </div>
+                                        <div class="col-sm-4 col-sm-offset-2 second-column">
+                                            <h3>&nbsp;</h3>
+                                            <p> Complexity in applying the technology:</p>
+                                            <p>- Need for additional pumps, high-performance blender, significant tanks stock;</p>
+                                            <p>- Wellbore design with maximum flow area.</p>
+
+
+                                        </div>
+                                    </div><!-- row -->
+                                </div><!-- item -->
+                            </div>
+
+                        </div><!-- slider -->
+                    </div>
+                </section>
             </div>
         </div><!-- /#page-content -->
 
