CHange text in main in en

--- a/en/main.html
+++ b/en/main.html
@@ -77,9 +77,9 @@
                                     <div class="row slide-margin">
                                         <div class="col-sm-6">
                                             <div class="carousel-content">
-                                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
-                                                <a class="btn-slide animation animated-item-3" href="#">Read More</a>
+                                                <h1 class="animation animated-item-1">NEWTECK WELL SERVICE</h1>
+                                                <h2 class="animation animated-item-2">COMPANY PROVIDING SERVICE ON OIL AND GAS WELL STIMULTATION(FRACTURING TREATMENT) WITH OF USE ADVANCED TECHNOLOGY</h2>
+                                                <a class="btn-slide animation animated-item-3" href="company.html">Read More</a>
                                             </div>
                                         </div>
                                     </div>
@@ -91,9 +91,9 @@
                                     <div class="row slide-margin">
                                         <div class="col-sm-6">
                                             <div class="carousel-content">
-                                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
-                                                <a class="btn-slide animation animated-item-3" href="#">Read More</a>
+                                                <h1 class="animation animated-item-1">HIGHLY QUALIFIED STAFF</h1>
+                                                <h2 class="animation animated-item-2">OF COMPANY HAVE LONG-TERM EXPERIENCE OF WORK ON OIL AND GAS WELL STIMULATION</h2>
+                                                <a class="btn-slide animation animated-item-3" href="career.html">Read More</a>
                                             </div>
                                         </div>
                                     </div>
@@ -105,9 +105,9 @@
                                     <div class="row slide-margin">
                                         <div class="col-sm-6">
                                             <div class="carousel-content">
-                                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
-                                                <a class="btn-slide animation animated-item-3" href="#">Read More</a>
+                                                <h1 class="animation animated-item-1">SPECIAL EQUIPMENT</h1>
+                                                <h2 class="animation animated-item-2">AND SUPPORT FACILITEIS AT COMPANY'S DISPOSAL ALLOW FOR TROUBLE FREE OPERATION UNDER FAR-NORTH CONDITIONS</h2>
+                                                <a class="btn-slide animation animated-item-3" href="equipment.html">Read More</a>
                                             </div>
                                         </div>
                                     </div>
