--- a/en/news.html
+++ b/en/news.html
@@ -90,7 +90,7 @@
 	                            </div>   
 	                            <div class="col-xs-12 col-sm-10 blog-content">
 	     
-	                                <h2><a href="blog-item.html">Year 2016: High volume fracs</a></h2>
+	                                <h2><a href="news/2016-07-16-big-volumes.html">Year 2016: High volume fracs</a></h2>
 	                            </div>
 	                        </div>    
 	                    </div><!--/.blog-item-->
