Add third and fourth news

--- a/en/news.html
+++ b/en/news.html
@@ -103,7 +103,7 @@
 	                            </div>   
 	                            <div class="col-xs-12 col-sm-10 blog-content">
 	     
-	                                <h2><a href="blog-item.html">Multistage fracturing on J-0 deposits</a></h2>
+	                                <h2><a href="news/2016-01-14-multistage-j0.html">Multistage fracturing on J-0 deposits</a></h2>
 	                            </div>
 	                        </div>    
 	                    </div><!--/.blog-item-->
@@ -116,7 +116,7 @@
 	                            </div>   
 	                            <div class="col-xs-12 col-sm-10 blog-content">
 	     
-	                                <h2><a href="blog-item.html">Multistage fracturing using CT</a></h2>
+	                                <h2><a href="news/2015-12-08-multistage-ct-frac.html">Multistage fracturing using CT</a></h2>
 	                            </div>
 	                        </div>    
 	                    </div><!--/.blog-item-->
