Fix text in tech

--- a/en/technology.html
+++ b/en/technology.html
@@ -87,9 +87,10 @@
                                         </div>
                                         <div class="col-sm-4 col-sm-offset-2 second-column">
                                             <h3>&nbsp;</h3>
-                                            <p>Slick Water is a water-based chemical used to reduce surface tension.</p>
-                                            <p>More often fracs are performed in low-permeability reservoirs, with the use of non-viscous water-based fluids and with addition of friction reducing agents.</p>
-                                            <p>A fluid used during fracturing treatment allows for transporting proppant by means of high pumping rate and without any gellant required. Frac fluid does not need preliminary heating.</p>
+                                            <p> The method described allows for reducing costs for treatment and minimizes calmatation of formation or its damage.</p>
+                                            <p>Newteck Well Service has an experience of performing fracturing treatment with the use of friction reducing agents</p>
+                                            <p>It is possible to apply the chemicals of different manufacturers and use various methodological approaches.</p>
+                                            <p>To increase the efficiency of application of Slick Water technology, the water and sand mixture must be pumped at maximum allowable speed.</p>
 
 
                                         </div>
