add notes in russian main page

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                                     <div class="row slide-margin">
                                         <div class="col-sm-6">
                                             <div class="carousel-content">
-                                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
+                                                <h1 class="animation animated-item-1">Ньютех Велл Сервис</h1>
+                                                <h2 class="animation animated-item-2">КОМПАНИЯ, ПРЕДОСТАВЛЯЮЩАЯ УСЛУГИ ПО ПРОВЕДЕНИЮ ИНТЕНСИФИКАЦИИ НЕФТЯНЫХ И ГАЗОВЫХ СКВАЖИН</h2>
                                                 <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                                             </div>
                                         </div>
@@ -91,8 +91,8 @@
                                     <div class="row slide-margin">
                                         <div class="col-sm-6">
                                             <div class="carousel-content">
-                                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
+                                                <h1 class="animation animated-item-1">КВАЛИФИЦИРОВАННЫЕ СОТРУДНИКИ</h1>
+                                                <h2 class="animation animated-item-2">КОМПАНИИ ИМЕЮТ МНОГОЛЕТНИЙ ОПЫТ ПО ПРОВЕДЕНИЮ ИНТЕСИФИКАЦИИ НЕФТЯНЫХ И ГАЗОВЫХ СКВАЖИН</h2>
                                                 <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                                             </div>
                                         </div>
@@ -105,8 +105,8 @@
                                     <div class="row slide-margin">
                                         <div class="col-sm-6">
                                             <div class="carousel-content">
-                                                <h1 class="animation animated-item-1">Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-                                                <h2 class="animation animated-item-2">Accusantium doloremque laudantium totam rem aperiam, eaque ipsa...</h2>
+                                                <h1 class="animation animated-item-1">СПЕЦИАЛИЗИРОВАННАЯ ТЕХНИКА</h1>
+                                                <h2 class="animation animated-item-2">И ВСПОМОГОТЕЛЬНОЕ ОБОРУДОВАНИЕ, НАХОДЯЩИЕСЯ В АРСЕНАЛЕ КОМПАНИИ, ПОЗВОЛЯЮТ БЕСПЕРЕБОЙНО РАБОТАТЬ В УСЛОВИЯХ КРАЙНЕГО СЕВЕРА</h2>
                                                 <a class="btn-slide animation animated-item-3" href="#">Read More</a>
                                             </div>
                                         </div>
