add contacts in en

--- a/ru/equipment.html
+++ b/ru/equipment.html
@@ -51,7 +51,7 @@
 						<li><a href="company.html">Компания</a></li>
 						<li><a href="equipment.html">Оборудование</a></li>
 						<li><a href="technology.html">Технологии</a></li>
-						<li><a href="hse.html">ОТ, ПБ и ООС</a></li>
+						<li><a href="hse.html">ОТ</a></li>
 							 
 						<li><a href="news.html">Новости</a></li> 
 						<li><a href="career.html">Карьера</a></li>
